--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
-  text-align: center;
-}
+/*.App {*/
+/*  text-align: center;*/
+/*}*/
 
-div {
+/*div {
   text-align: center;
-}
+}*/
 
 .App-logo {
   height: 40vmin;
